--- a/experience.html
+++ b/experience.html
@@ -32,22 +32,21 @@
 		<div class="content">
 			<nav class="topnav">
 				<ul>
-					<li><a href="index.html" class="selected">About Me</a></li>
-					<li><a href="experience.html">Experience</a></li>
+					<li><a href="index.html">About Me</a></li>
+					<li><a href="experience.html" class="selected">Experience</a></li>
 					<li><a href="projects.html">Projects</a></li>
 					<li><a href="skills.html">Skills</a></li>
 				</ul>
 			</nav>
 			
-			<!-- About Me -->
+			<!-- Expedia Group -->
 			<div class="point">
-				<h2>About Me</h2>
-				<span><img src="images/beach.jpg" alt="Me On The Beach" /></span>
-				<p>I am a senior at Arizona State Univeristy, majoring in Computer Science. 
-					I have always had a passion for iOS development and I have started several 
-					personal projects to expand my knowledge. I love to learn and I have become 
-					very quick when it comes to comprehending new frameworks or languages. During 
-					my freetime I enjoy reading, spending time at the beach, or snowboarding in the Winter.</p>
+				<h2>Expedia Group</h2>
+				<span><img src="images/eg.jpg" alt="Expedia Group Logo" /></span>
+				<p>I worked on an IOS Development team in Gurgaon, India, building components in SwiftUI and UIKit. 
+					During this internship I was able to work with Apollo graphQL to build SDUI, reusable components 
+					with unit tests and uitests. I was also able to attend EG Global hackathon where my team won 
+					“Share the Love” category by utilizing apple’s SharePlay api.</p>
 			</div>
 		</div>
 	</body>
