--- a/skills.html
+++ b/skills.html
@@ -32,22 +32,36 @@
 		<div class="content">
 			<nav class="topnav">
 				<ul>
-					<li><a href="index.html" class="selected">About Me</a></li>
+					<li><a href="index.html">About Me</a></li>
 					<li><a href="experience.html">Experience</a></li>
 					<li><a href="projects.html">Projects</a></li>
-					<li><a href="skills.html">Skills</a></li>
+					<li><a href="skills.html" class="selected">Skills</a></li>
 				</ul>
 			</nav>
 			
-			<!-- About Me -->
-			<div class="point">
-				<h2>About Me</h2>
-				<span><img src="images/beach.jpg" alt="Me On The Beach" /></span>
-				<p>I am a senior at Arizona State Univeristy, majoring in Computer Science. 
-					I have always had a passion for iOS development and I have started several 
-					personal projects to expand my knowledge. I love to learn and I have become 
-					very quick when it comes to comprehending new frameworks or languages. During 
-					my freetime I enjoy reading, spending time at the beach, or snowboarding in the Winter.</p>
+			<!-- Skills -->
+			<div class="skill">
+				<li class="nobullet"><h3 style="text-align:left">Swift + SwiftUI + UIKit</h3>
+					<span class="bar"><span class="swift"></span></span>
+				</li>
+				<li class="nobullet"><h3 style="text-align:left">Java</h3>
+					<span class="bar"><span class="java"></span></span>
+				</li>
+				<li class="nobullet"><h3 style="text-align:left">C/C++</h3>
+					<span class="bar"><span class="cplus"></span></span>
+				</li>
+				<li class="nobullet"><h3 style="text-align:left">SQL</h3>
+					<span class="bar"><span class="sql"></span></span>
+				</li>
+				<li class="nobullet"><h3 style="text-align:left">Apollo GraphQL</h3>
+					<span class="bar"><span class="apollo"></span></span>
+				</li>
+				<li class="nobullet"><h3 style="text-align:left">HTML + CSS + JavaScript</h3>
+					<span class="bar"><span class="hcj"></span></span>
+				</li>
+				<li class="nobullet"><h3 style="text-align:left">Docker</h3>
+					<span class="bar"><span class="docker"></span></span>
+				</li>
 			</div>
 		</div>
 	</body>
