--- a/My_Spot.html
+++ b/My_Spot.html
@@ -28,10 +28,10 @@
 		<div class="content">
 			<nav class="topnav">
 				<ul>
-					<li><a href="My_Spot.html" class="selected">About</a></li>
-					<li><a href="features.html">Features</a></li>
-					<li><a href="technology.html">Technology</a></li>
-					<li><a href="privacy.html">Privacy</a></li>
+					<li><a href="My_Spot" class="selected">About</a></li>
+					<li><a href="features">Features</a></li>
+					<li><a href="technology">Technology</a></li>
+					<li><a href="privacy">Privacy</a></li>
 				</ul>
 			</nav>
 
