--- a/experience.html
+++ b/experience.html
@@ -32,10 +32,10 @@
 		<div class="content">
 			<nav class="topnav">
 				<ul>
-					<li><a href="index.html">About Me</a></li>
-					<li><a href="experience.html" class="selected">Experience</a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="skills.html">Skills</a></li>
+					<li><a href="index">About Me</a></li>
+					<li><a href="experience" class="selected">Experience</a></li>
+					<li><a href="projects">Projects</a></li>
+					<li><a href="skills">Skills</a></li>
 				</ul>
 			</nav>
 			
