--- a/features.html
+++ b/features.html
@@ -56,10 +56,10 @@
 		<div class="content">
 			<nav class="topnav">
 				<ul>
-					<li><a href="My_Spot.html">About</a></li>
-					<li><a href="features.html" class="selected">Features</a></li>
-					<li><a href="technology.html">Technology</a></li>
-					<li><a href="privacy.html">Privacy</a></li>
+					<li><a href="My_Spot">About</a></li>
+					<li><a href="features" class="selected">Features</a></li>
+					<li><a href="technology">Technology</a></li>
+					<li><a href="privacy">Privacy</a></li>
 				</ul>
 			</nav>
 			<div class="horizontalscrollnav">
