--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 		<div class="content">
 			<nav class="topnav">
 				<ul>
-					<li><a href="index.html" class="selected">About Me</a></li>
-					<li><a href="experience.html">Experience</a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="skills.html">Skills</a></li>
+					<li><a href="index" class="selected">About Me</a></li>
+					<li><a href="experience">Experience</a></li>
+					<li><a href="projects">Projects</a></li>
+					<li><a href="skills">Skills</a></li>
 				</ul>
 			</nav>
 			
