--- a/privacy.html
+++ b/privacy.html
@@ -28,10 +28,10 @@
 		<div class="content">
 			<nav class="topnav">
 				<ul>
-					<li><a href="My_Spot.html">About</a></li>
-					<li><a href="features.html">Features</a></li>
-					<li><a href="technology.html">Technology</a></li>
-					<li><a href="privacy.html" class="selected">Privacy</a></li>
+					<li><a href="My_Spot">About</a></li>
+					<li><a href="features">Features</a></li>
+					<li><a href="technology">Technology</a></li>
+					<li><a href="privacy" class="selected">Privacy</a></li>
 				</ul>
 			</nav>
 			
