--- a/skills.html
+++ b/skills.html
@@ -32,10 +32,10 @@
 		<div class="content">
 			<nav class="topnav">
 				<ul>
-					<li><a href="index.html">About Me</a></li>
-					<li><a href="experience.html">Experience</a></li>
-					<li><a href="projects.html">Projects</a></li>
-					<li><a href="skills.html" class="selected">Skills</a></li>
+					<li><a href="index">About Me</a></li>
+					<li><a href="experience">Experience</a></li>
+					<li><a href="projects">Projects</a></li>
+					<li><a href="skills" class="selected">Skills</a></li>
 				</ul>
 			</nav>
 			
