update image fix

--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
 			<!-- My Spot -->
 			<div class="point" id="myspot">
 				<h2>My Spot</h2>
-				<span><img class="filter-red" src="images/logo.svg" alt="My Spot Logo" /></span>
+				<span><img src="images/icon.png" alt="My Spot Logo" /></span>
 				<p>My Spot is my most ambitious project yet! It's an iOS, watchOS, and iPadOS app with widgets, 
 					notifications (with service/content extensions), iMessage app, AppClip, and much more. My Spot 
 					is a social media app centered around locations. It uses many Apple frameworks and runs mainly in 
