--- a/projects.html
+++ b/projects.html
@@ -15,22 +15,6 @@
 	</head>
 	<body class="container" id="background">
 
-		<!-- Hamburger Menu -->
-		<nav role="navigation">
-			<div id="menuToggle">
-			  <input type="checkbox" />
-			  <span></span>
-			  <span></span>
-			  <span></span>
-			  <ul id="menu">
-				<a href="#myspot"><li>My Spot</li></a>
-				<a href="#news"><li>News App</li></a>
-				<a href="#querydata"><li>Data Query</li></a>
-				<a href="#compression"><li>Compression Algorithm</li></a>
-			  </ul>
-			</div>
-		</nav>
-
 		<!-- HEADER -->
 		<header id="header">
 			<span class="logo"><img src="images/Isaac.jpg" class="isaac_filter" alt="Isaac Paschall" /></span>
@@ -70,7 +54,7 @@
 					is a social media app centered around locations. It uses many Apple frameworks and runs mainly in 
 					the SwiftUI lifecycle but also utilizes many UIKit features. Some frameworks used include: Cloudkit, CoreData, CoreML, and Combine. 
 					For more information please visit the 
-					<a href="https://isaacpasc.github.io/My_Spot" target="_blank">My Spot Offical Website</a> which goes in depth on technologies 
+					<a href="https://myspotexploration.com" target="_blank">My Spot Offical Website</a> which goes in depth on technologies 
 					used and all of its features or find it on the 
 					<a href="https://apps.apple.com/us/app/my-spot-exploration/id1613618373" target="_blank">AppStore</a>.</p>
 			</div>
