--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,8 @@
 				<div class="socialcontainer">
 					<a class="socialbtn" href="https://github.com/isaacpasc" target="_blank"><img src="images/GithubIcon.png"/></a>
 					<a class="socialbtn" href="https://www.linkedin.com/in/isaac-paschall-51169a165/" target="_blank"><img src="images/LinkedInLogo.png"/></a>
+					<a class="socialbtn" href="https://www.myspotexploration.com" target="_blank"><img src="images/icon.png"/></a>
+					<a class="socialbtn" href="https://dashifyios.netlify.app" target="_blank"><img src="images/dashifyCircleD.png"/></a>
 				</div>
 		</header>
 
@@ -62,7 +64,7 @@
 
 			<!-- Dashify -->
 			<div class="point" id="dashify">
-				<h2>My Spot</h2>
+				<h2>Dashify</h2>
 				<span><img src="images/dashifyCircleD.png" alt="Dashify Logo" /></span>
 				<p>Dashify is an ios client for web hosting service, <a href="https://www.netlify.com/" target="_blank">Netlify</a>. In this project I learned to create generic api calls with async/await and combine, authentication and preventing CSRF attacks, and WebViews with javascript. 
 					The login process for Dashify uses a WebView to present a login screen for Netlify users. This WebView had some challenges to properly confrom to <a href="https://developer.apple.com/app-store/review/guidelines/" target="_blank">AppStore Review Guidelines</a>. First off, Netlify does not offer 'Sign in with Apple' which is
