--- a/skills.html
+++ b/skills.html
@@ -25,6 +25,8 @@
 				<div class="socialcontainer">
 					<a class="socialbtn" href="https://github.com/isaacpasc" target="_blank"><img src="images/GithubIcon.png"/></a>
 					<a class="socialbtn" href="https://www.linkedin.com/in/isaac-paschall-51169a165/" target="_blank"><img src="images/LinkedInLogo.png"/></a>
+					<a class="socialbtn" href="https://www.myspotexploration.com" target="_blank"><img src="images/icon.png"/></a>
+					<a class="socialbtn" href="https://dashifyios.netlify.app" target="_blank"><img src="images/dashifyCircleD.png"/></a>
 				</div>
 		</header>
 
