--- a/projects.html
+++ b/projects.html
@@ -67,10 +67,9 @@
 				<h2>Dashify</h2>
 				<span><img src="images/dashifyCircleD.png" alt="Dashify Logo" /></span>
 				<p>Dashify is an ios client for web hosting service, <a href="https://www.netlify.com/" target="_blank">Netlify</a>. In this project I learned to create generic api calls with async/await and combine, authentication and preventing CSRF attacks, and WebViews with javascript. The project also uses keychain to store login tokens.
-					The login process for Dashify uses a WebView to present a login screen for Netlify users. This WebView had some challenges to properly confrom to <a href="https://developer.apple.com/app-store/review/guidelines/" target="_blank">AppStore Review Guidelines</a>. One issue was that Netlify offers a 'Pro' plan but Dashify does not offer an in-app-purchase method for buying this subscription. The only way around this rule is a 'free standalone app acting as a stand-alone companion to a paid web based tool'.
-					The only issue here is that there must be not one call to action to purchase a 'Pro' Netlify account from within Dashify. This meant that I had to lock down the login experience in Dashify to only show exactly what I want and nothing more. I was able to inject javascript at the end of each document to successfully remove all upgrade buttons. And if the user
-					 ever tries to leave the login process, the WebView will clear all cookies to sign them out and send them back to login.
-					<a href="https://dashifyios.netlify.app" target="_blank">Dashify Offical Website</a> or find it on the 
+					The login process for Dashify uses a WebView to present a login screen for Netlify users. For more information please visit 
+					<a href="https://dashifyios.netlify.app" target="_blank">Dashify Offical Website</a> which goes in depth on technologies 
+					used and all of its features or find it on the 
 					<a href="https://apps.apple.com/us/app/dashify-manage-your-website/id6443705790" target="_blank">AppStore</a>.</p>
 			</div>
 
