added new project

--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,7 @@
 					<a class="socialbtn" href="https://www.linkedin.com/in/isaac-paschall-51169a165/" target="_blank"><img src="images/LinkedInLogo.png"/></a>
 					<a class="socialbtn" href="https://www.myspotexploration.com" target="_blank"><img src="images/icon.png"/></a>
 					<a class="socialbtn" href="https://dashifyios.netlify.app" target="_blank"><img src="images/dashifyCircleD.png"/></a>
+					<a class="socialbtn" href="https://foodbot.netlify.app/" target="_blank"><img src="images/foodbotlogonogb.png"/></a>
 				</div>
 		</header>
 
@@ -43,11 +44,12 @@
 			<div class="horizontalscrollnav">
 				<a href="#myspot">My Spot</a>
 				<a href="#dashify">Dashify</a>
+				<a href="#foodbot">Food Bot</a>
 				<a href="#news">News App</a>
 				<a href="#querydata">Data Query</a>
 				<a href="#compression">Compression Algorithm</a>
 			</div>
-			
+
 			<!-- My Spot -->
 			<div class="point" id="myspot">
 				<h2>My Spot</h2>
@@ -71,6 +73,16 @@
 					<a href="https://dashifyios.netlify.app" target="_blank">Dashify Offical Website</a> which goes in depth on technologies 
 					used and all of its features or find it on the 
 					<a href="https://apps.apple.com/us/app/dashify-manage-your-website/id6443705790" target="_blank">AppStore</a>.</p>
+			</div>
+
+			<!-- Food Bot -->
+			<div class="point" id="foodbot">
+				<h2>Food Bot</h2>
+				<span><img src="images/foodbotlogonogb.png" alt="Food Bot Logo" /></span>
+				<p>Dashify is an ios client for web hosting service, <a href="https://www.netlify.com/" target="_blank">Netlify</a>. In this project, I learned how to integrate javascript with WKWebView for 2 way communication and use CloudKit to build a SDUI app. Food Bot is an app that autofills surveys for various restaurants in order to receive rewards such as free food items. Food Bot also uses AVCapture, Machine Learning, and regular expressions to scrape survey codes off of receipts.  For more information please visit 
+					<a href="https://foodbot.netlify.app/" target="_blank">Food Bot Offical Website</a> which goes in depth on technologies 
+					used or find it on the 
+					<a href="https://apps.apple.com/us/app/food-bot-survey-filler/id6444194042" target="_blank">AppStore</a>.</p>
 			</div>
 
 			<!-- News App -->
