--- a/skills.html
+++ b/skills.html
@@ -27,6 +27,7 @@
 					<a class="socialbtn" href="https://www.linkedin.com/in/isaac-paschall-51169a165/" target="_blank"><img src="images/LinkedInLogo.png"/></a>
 					<a class="socialbtn" href="https://www.myspotexploration.com" target="_blank"><img src="images/icon.png"/></a>
 					<a class="socialbtn" href="https://dashifyios.netlify.app" target="_blank"><img src="images/dashifyCircleD.png"/></a>
+					<a class="socialbtn" href="https://foodbot.netlify.app/" target="_blank"><img src="images/foodbotlogonogb.png"/></a>
 				</div>
 		</header>
 
