--- a/experience.html
+++ b/experience.html
@@ -27,6 +27,7 @@
 					<a class="socialbtn" href="https://www.linkedin.com/in/isaac-paschall-51169a165/" target="_blank"><img src="images/LinkedInLogo.png"/></a>
 					<a class="socialbtn" href="https://www.myspotexploration.com" target="_blank"><img src="images/icon.png"/></a>
 					<a class="socialbtn" href="https://dashifyios.netlify.app" target="_blank"><img src="images/dashifyCircleD.png"/></a>
+					<a class="socialbtn" href="https://ask-ai-chatbot.netlify.app/" target="_blank"><img src="images/logo_with_color.png"/></a>
 					<a class="socialbtn" href="https://foodbot.netlify.app/" target="_blank"><img src="images/foodbotlogonogb.png"/></a>
 				</div>
 		</header>
@@ -46,10 +47,9 @@
 			<div class="point">
 				<h2>Expedia Group</h2>
 				<span><img src="images/eg.jpg" alt="Expedia Group Logo" /></span>
-				<p>I worked on an IOS Development team in Gurgaon, India, building components in SwiftUI and UIKit. 
-					During this internship I was able to work with Apollo graphQL to build SDUI, reusable components 
-					with unit tests and uitests. I was also able to attend EG Global hackathon where my team won 
-					“Share the Love” category by utilizing apple’s SharePlay api.</p>
+				<p>During my time with Expedia, I had the pleasure of working on an IOS Development team based in Gurgaon, India. Together, we built various components utilizing the latest technologies such as SwiftUI and UIKit. During this internship, I had the opportunity to work with Apollo graphQL to build SDUI, which involved creating reusable components with unit tests and uitests.
+
+					Additionally, I was fortunate enough to participate in the EG Global hackathon, where my team won the "Share the Love" category. We achieved this by leveraging Apple's innovative SharePlay API, which allowed us to create a seamless and engaging experience for users. Overall, my experience at Expedia taught me valuable skills and provided me with the opportunity to work alongside talented individuals on meaningful projects.</p>
 			</div>
 		</div>
 	</body>
