--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 					<a class="socialbtn" href="https://www.linkedin.com/in/isaac-paschall-51169a165/" target="_blank"><img src="images/LinkedInLogo.png"/></a>
 					<a class="socialbtn" href="https://www.myspotexploration.com" target="_blank"><img src="images/icon.png"/></a>
 					<a class="socialbtn" href="https://dashifyios.netlify.app" target="_blank"><img src="images/dashifyCircleD.png"/></a>
+					<a class="socialbtn" href="https://ask-ai-chatbot.netlify.app/" target="_blank"><img src="images/logo_with_color.png"/></a>
 					<a class="socialbtn" href="https://foodbot.netlify.app/" target="_blank"><img src="images/foodbotlogonogb.png"/></a>
 				</div>
 		</header>
@@ -46,11 +47,7 @@
 			<div class="point">
 				<h2>About Me</h2>
 				<span><img src="images/beach.jpg" alt="Me On The Beach" /></span>
-				<p>I am a senior at Arizona State Univeristy, majoring in Computer Science. 
-					I have always had a passion for iOS development and I have started several 
-					personal projects to expand my knowledge. I love to learn and I have become 
-					very quick when it comes to comprehending new frameworks or languages. During 
-					my freetime I enjoy reading, spending time at the beach, or snowboarding in the Winter.</p>
+				<p>Welcome! I'm a Computer Science major at Arizona State University who is passionate about iOS development. As an avid learner, I enjoy expanding my knowledge through personal projects and staying up-to-date with the latest frameworks and languages. Over the years, I have honed my skills in building native iOS applications, utilizing a diverse range of tech stacks such as Firebase, iCloud, Revenue Rat, and more. Please take a moment to explore the <a href="projects">projects tab</a> to see some of the applications I've built, and if you get a chance to try them out, I would greatly appreciate your review on the <a href="https://apps.apple.com/us/developer/isaac-paschall/id1613618375" target="_blank">Appstore</a>!</p>
 			</div>
 		</div>
 	</body>
