--- a/projects.html
+++ b/projects.html
@@ -39,7 +39,6 @@
 					<li><a href="index">About Me</a></li>
 					<li><a href="experience">Experience</a></li>
 					<li><a href="projects" class="selected">Projects</a></li>
-					<li><a href="skills">Skills</a></li>
 				</ul>
 			</nav>
 			<div class="horizontalscrollnav">
@@ -67,7 +66,7 @@
 			<div class="point" id="askai">
 				<h2>Ask AI</h2>
 				<span><img src="images/logo_with_color.png" alt="Ask AI" /></span>
-				<p>Ask AI is an innovative AI chatbot that utilizes a range of cutting-edge technologies to provide you with the answers you need. Built with Firebase, GPT-3, Cloudkit, CoreData, Admob, and Revenue Cat, this app uses Firebase for analytics, Firestore database, authentication, and cloud functions to ensure seamless performance. By leveraging the power of Open AI GPT-3 model api, Ask AI is able to provide comprehensive answers to a wide range of questions. The app also features a unique typing effect from the AI, made possible through server-sent events for faster responses. Authentication is done through Sign in with Apple, with cloud functions available to revoke authentication tokens as needed. Visit the <a href="https://ask-ai-chatbot.netlify.app/" target="_blank">Ask AI official website</a> to learn more about the technologies used in this project, or check it out on the <a href="https://apps.apple.com/us/app/ask-ai-free-gpt-chat-bot/id1671670609" target="_blank">AppStore</a>.</p>
+				<p>Ask AI is an innovative AI chatbot that utilizes a range of cutting-edge technologies to provide you with the answers you need. Built with Firebase, GPT-3.5 turbo, Cloudkit, CoreData, Admob, and Revenue Cat. This app uses Firebase for analytics, Firestore database, authentication, app attest, remote config, crashlytics, and cloud functions to ensure seamless performance. By leveraging the power of Open AI GPT-3.5 turbo model api, Ask AI is able to provide comprehensive answers to a wide range of questions. The app also features a unique typing effect from the AI, made possible through server-sent events for faster responses. Authentication is done through Sign in with Apple, with cloud functions available to revoke authentication tokens as needed. This app is available on all devices: watchOS, tvOS, macOS, iOS, iMessages, widgets, siri, shortcuts, app intents, and many more! Ask AI is more than just a chatbot, it uses several other technologies to let users do some amazing things. Be sure to check out the incredible features added to this app! Visit the <a href="https://ask-ai-chatbot.netlify.app/" target="_blank">Ask AI official website</a> to learn more about the technologies used in this project, or check it out on the <a href="https://apps.apple.com/us/app/ask-ai-free-gpt-chat-bot/id1671670609" target="_blank">AppStore</a>.</p>
 			</div>
 
 			<!-- Dashify -->
