--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
 			<div class="horizontalscrollnav">
 				<a href="#myspot">My Spot</a>
 				<a href="#dashify">Dashify</a>
-				<a href="#askai">Ask AI</a>
+				<a href="#pocketai">Pocket AI</a>
 				<a href="#foodbot">Food Bot</a>
 				<a href="#news">News App</a>
 				<a href="#querydata">Data Query</a>
@@ -62,11 +62,11 @@
 					To learn more about My Spot and the technology behind it, please visit the <a href="https://myspotexploration.com" target="_blank">official My Spot website</a>. Here you'll find a detailed breakdown of all the app's features and the technologies that make it possible. Alternatively, you can find My Spot on the <a href="https://apps.apple.com/us/app/my-spot-exploration/id1613618373" target="_blank">AppStore</a> and start exploring its many capabilities today.</p>
 			</div>
 
-			<!-- Ask AI -->
-			<div class="point" id="askai">
-				<h2>Ask AI</h2>
-				<span><img src="images/logo_with_color.png" alt="Ask AI" /></span>
-				<p>Ask AI is an innovative AI chatbot that utilizes a range of cutting-edge technologies to provide you with the answers you need. Built with Firebase, GPT-3.5 turbo, Cloudkit, CoreData, Admob, and Revenue Cat. This app uses Firebase for analytics, Firestore database, authentication, app attest, remote config, crashlytics, and cloud functions to ensure seamless performance. By leveraging the power of Open AI GPT-3.5 turbo model api, Ask AI is able to provide comprehensive answers to a wide range of questions. The app also features a unique typing effect from the AI, made possible through server-sent events for faster responses. Authentication is done through Sign in with Apple, with cloud functions available to revoke authentication tokens as needed. This app is available on all devices: watchOS, tvOS, macOS, iOS, iMessages, widgets, siri, shortcuts, app intents, and many more! Ask AI is more than just a chatbot, it uses several other technologies to let users do some amazing things. Be sure to check out the incredible features added to this app! Visit the <a href="https://ask-ai-chatbot.netlify.app/" target="_blank">Ask AI official website</a> to learn more about the technologies used in this project, or check it out on the <a href="https://apps.apple.com/us/app/ask-ai-free-gpt-chat-bot/id1671670609" target="_blank">AppStore</a>.</p>
+			<!-- Pocket AI -->
+			<div class="point" id="pocketai">
+				<h2>Pocket AI</h2>
+				<span><img src="images/logo_with_color.png" alt="Pocket AI" /></span>
+				<p>Pocket AI is an innovative AI chatbot that utilizes a range of cutting-edge technologies to provide you with the answers you need. Built with Firebase, GPT-3.5 turbo, Cloudkit, CoreData, Admob, and Revenue Cat. This app uses Firebase for analytics, Firestore database, authentication, app attest, remote config, crashlytics, and cloud functions to ensure seamless performance. By leveraging the power of Open AI GPT-3.5 turbo model api, Pocket AI is able to provide comprehensive answers to a wide range of questions. The app also features a unique typing effect from the AI, made possible through server-sent events for faster responses. Authentication is done through Sign in with Apple, with cloud functions available to revoke authentication tokens as needed. This app is available on all devices: watchOS, tvOS, macOS, iOS, iMessages, widgets, siri, shortcuts, app intents, and many more! Pocket AI is more than just a chatbot, it uses several other technologies to let users do some amazing things. Be sure to check out the incredible features added to this app! Visit the <a href="https://ask-ai-chatbot.netlify.app/" target="_blank">Pocket AI official website</a> to learn more about the technologies used in this project, or check it out on the <a href="https://apps.apple.com/us/app/ask-ai-free-gpt-chat-bot/id1671670609" target="_blank">AppStore</a>.</p>
 			</div>
 
 			<!-- Dashify -->
